[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/fonts/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://menu/characterFile.tscn" type="PackedScene" id=2]
[ext_resource path="res://menu/gameOptions.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 112.0
margin_top = 30.0
margin_right = 912.0
margin_bottom = 570.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 800.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 1 )
text = "Выберите персонажей:"
align = 1

[node name="Panel" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
self_modulate = Color( 0.968627, 0.662745, 0.662745, 1 )
margin_top = 40.0
margin_right = 800.0
margin_bottom = 540.0
rect_min_size = Vector2( 800, 500 )

[node name="vb_chars" type="VBoxContainer" parent="CenterContainer/VBoxContainer/Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 793.0
margin_bottom = 493.0

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/Panel/vb_chars"]
margin_right = 786.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 1 )
text = "Создать нового персонажа"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/Panel/vb_chars"]
margin_top = 46.0
margin_right = 786.0
margin_bottom = 88.0

[node name="select" type="Button" parent="CenterContainer/VBoxContainer/Panel/vb_chars/HBoxContainer"]
margin_right = 391.0
margin_bottom = 42.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "подтвердить"

[node name="delete" type="Button" parent="CenterContainer/VBoxContainer/Panel/vb_chars/HBoxContainer"]
margin_left = 395.0
margin_right = 786.0
margin_bottom = 42.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "удалить"

[node name="characterFile" parent="CenterContainer/VBoxContainer/Panel/vb_chars" instance=ExtResource( 2 )]
visible = false
margin_top = 92.0
margin_bottom = 192.0

[connection signal="pressed" from="CenterContainer/VBoxContainer/Panel/vb_chars/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Panel/vb_chars/HBoxContainer/select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Panel/vb_chars/HBoxContainer/delete" to="." method="_on_delete_pressed"]
